# libCellMLResets

./: .gitignore  CMakeLists.txt  README.md
cmake/: common.cmake
src/: CMakeLists.txt  common.cpp  common.h  main.cvode.cpp.in  main.fe.cpp.in
src/cell_growth/: model.c  model.h
src/cell_growth_reset_between_t0_and_t1/: CMakeLists.txt  model.c  solution.csv
src/cell_growth_reset_on_t0/: model.c  solution.csv
src/cell_growth_reset_on_t0_and_t1/: model.c
src/cell_growth_reset_on_t1/: model.c  model.h
src/cell_growth_resets/: CMakeLists.txt
src/cell_growths/: model.c  model.h  solution.csv
src/example1/: CMakeLists.txt  README.md  model.c  model.h  solution.csv
